# skema-common

./: .gitignore  README.org  Setup.hs  Setup.lhs  install.sh  skema-common.cabal  test.sh
docs/: agpl3_header
src/Skema/: Concurrent.hs  Concurrent.lhs  DataValue.hs  GraphvizDot.hs  JSON.hs  JSON.lhs  JobProtocol.hs  Math.hs  Math.lhs  Network.hs  Network.lhs  ProgramFlow.hs  ProgramFlow.lhs  RunProtocol.hs  SIDMap.hs  SIDMap.lhs  Types.hs  Types.lhs  Util.hs  Util.lhs
src/test/: skema_common_test.hs  skema_common_test.lhs
tests/: skema_common_test.lhs
