Name:          skema-common
Version:       0.1.1
Cabal-Version: >=1.8
Description:   Skema Framework Common Libraries
License:       GPL
License-file:  LICENSE
Author:        Luis Cabellos
Maintainer:    cabellos@ifca.unican.es
Build-Type:    Simple

flag testing
    description: Testing mode
    default: False

Library
  hs-source-dirs:  src
  ghc-options:     -Wall
  Build-Depends:   base==4.*, containers>=0.3, bytestring==0.9.1.*, json==0.4.*, SHA==1.5.*, random==1.0.0.*, urlencoded==0.3.0.*, network==2.*, HTTP==4000.*, data-binary-float754==0.4.2.*
  extensions: CPP
  Exposed-modules:
    Skema.Util
    Skema.Math
    Skema.JSON
    Skema.Types
    Skema.DataValue
    Skema.ProgramFlow
    Skema.Network
    Skema.Concurrent
    Skema.SIDMap
  Other-modules:
  if flag(testing)
    buildable: False

Executable skema-common-test
  hs-source-dirs:  src src/test
  ghc-options:     -Wall -fhpc -Werror
  Main-is:         skema_common_test.lhs
  Build-Depends:   base==4.*, QuickCheck >= 2, containers>=0.3, bytestring==0.9.1.*, json==0.4.*, SHA==1.5.*, random==1.0.0.*, urlencoded==0.3.0.*, network==2.*, HTTP==4000.*, data-binary-float754==0.4.2.*
  cpp-options:   -DTESTING

  if flag(testing)
    buildable: True
  else
    buildable: False
