Name:          skema-common
Version:       0.3.0
Synopsis:      Skema Platform Common Libraries
Description:   Skema Platform is a framework for distributed workflows executed on GPUs. This is the common package of all Skema Platform applications.
License:       GPL
License-file:  LICENSE
Author:        Luis Cabellos
Maintainer:    cabellos@ifca.unican.es
Category:      Workflow, Distributed Computing, GPU
Build-Type:    Simple
Cabal-Version: >=1.9.2

flag testing
    description: Testing mode
    default: False

Library
  hs-source-dirs:  src
  ghc-options:     -Wall
  Build-Depends:   base==4.3.*, containers==0.4.0.*, bytestring==0.9.1.*, SHA==1.5.*, random==1.0.0.*, urlencoded==0.3.0.*, network==2.3.*, HTTP==4000.*, base64-bytestring==0.1.0.*, data-binary-ieee754==0.4.2.*, text==0.11.1.*, attoparsec==0.9.1.*, aeson==0.3.2.*
  extensions: CPP
  Exposed-modules:
    Skema.Util
    Skema.Math
    Skema.JSON
    Skema.Types
    Skema.DataValue
    Skema.ProgramFlow
    Skema.Network
    Skema.Concurrent
    Skema.SIDMap
    Skema.RunProtocol
    Skema.JobProtocol
  Other-modules:
  if flag(testing)
    buildable: False

Test-Suite skema-common-test
  type:            exitcode-stdio-1.0
  hs-source-dirs:  src src/test
  ghc-options:     -Wall -fhpc -Werror
  Main-is:         skema_common_test.hs
  Build-Depends:   base==4.3.*, QuickCheck >= 2, containers==0.4.0.*, bytestring==0.9.1.*, SHA==1.5.*, random==1.0.0.*, urlencoded==0.3.0.*, network==2.3.*, HTTP==4000.*, base64-bytestring==0.1.0.*, data-binary-ieee754==0.4.2.*, text==0.11.1.*, attoparsec==0.9.1.*, aeson==0.3.2.*
  cpp-options:   -DTESTING
